<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">iFAFU</string>
    <string name="error_grade_exam_query">等级考试查询暂未开放</string>
    <string name="error_system">系统异常</string>
    <string name="error_network">网络异常</string>
    <string name="error_view_params_not_found">页面参数获取失败</string>

    <string name="main_subtitle">福建农林大学教务助手</string>
    <string name="main_welcome">你好, %s</string>
    <string name="greeting_morning">Good morning, %s</string>
    <string name="greeting_afternoon">Good afternoon, %s</string>
    <string name="greeting_evening">Good evening, %s</string>
    <string name="date_format">%d月%d日 %s</string>
    <string name="chip_week">第%d周</string>
    <string name="chip_courses_today">今天%d节课</string>
    <string name="chip_no_courses_today">今天没有课</string>
    <string name="chip_exam_days">距考试%d天</string>
    <string name="chip_no_exam">暂无考试</string>
    <string name="empty_courses_title">今天没有课</string>
    <string name="empty_courses_subtitle">好好休息吧，不要亏待了自己哦</string>

    <string name="nav_syllabus">课表查询</string>
    <string name="nav_grid_syllabus">二维课表</string>
    <string name="nav_score">成绩查询</string>
    <string name="nav_exam">考试查询</string>
    <string name="nav_elective">选课</string>
    <string name="nav_comment">一键评教</string>
    <string name="nav_elective_score">选修学分</string>
    <string name="nav_about">关于</string>
    <string name="nav_logout">退出登录</string>

    <string name="login_title">登录</string>
    <string name="login_subtitle">使用教务系统账号登录</string>
    <string name="hint_account">学号</string>
    <string name="hint_password">密码</string>
    <string name="hint_captcha">验证码</string>
    <string name="btn_login">登 录</string>
    <string name="btn_logining">登录中…</string>

    <string name="syllabus_title">课程表</string>
    <string name="grid_syllabus_title">二维课表</string>
    <string name="score_title">成绩查询</string>
    <string name="exam_title">考试安排</string>
    <string name="elective_title">选课</string>
    <string name="comment_title">一键评教</string>
    <string name="about_title">关于 iFAFU</string>
    <string name="elective_score_title">选修学分</string>

    <string name="btn_query">查询</string>
    <string name="btn_submit">提交</string>
    <string name="btn_start_comment">开始评教</string>
    <string name="comment_running">正在评教中…</string>
    <string name="comment_success">评教完成</string>
    <string name="loading">加载中…</string>
    <string name="no_data">暂无数据</string>
    <string name="retry">重试</string>
    <string name="confirm_logout">确定退出登录？</string>

    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>

    <string name="about_version">版本 %s</string>
    <string name="about_desc">iFAFU KYZZ 是一款为福建农林大学学生打造的教务系统辅助工具，提供课表查询、成绩查询、考试安排、校园讨论等功能。\n\n感谢开源社区的18届学长打造的 iFAFU 软件，本应用借鉴了其设计思路。鉴于老接口和老模块的适配性问题，本软件的大多数模块均由作者 kyzz 自定义重写。\n\n秉承开源社区精神，本软件已在 GitHub 开源，愿后来的学弟学妹们能够继续传承开源精神。\n\nGitHub: github.com/kyzzniko-lang/ifafu-kyzz\n喜欢的话给个 Star 吧~</string>
    <string name="about_github">GitHub</string>

    <string name="course_detail_teacher">教师: %s</string>
    <string name="course_detail_address">地点: %s</string>
    <string name="course_detail_time">时间: %s</string>
</resources>
